--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -99,11 +99,11 @@ header h2 {
 }
 
 .appimage {
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px; 
-  border-bottom-left-radius: 8px; 
-  border-bottom-right-radius: 8px;
-  border:1px solid #fff;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px; 
+  border-bottom-left-radius: 25px; 
+  border-bottom-right-radius: 25px;
+  border:1px solid #859989;
 }
 
 #downloads {
