--- a/stylesheets/l3.css
+++ b/stylesheets/l3.css
@@ -8,5 +8,7 @@
 }
 
 .content {
-vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
